// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate payment for delivery order with 4 fries 1`] = `
Array [
  Object {
    "delivery": 0.5,
    "fries": 1.745,
    "name": undefined,
    "price": 9.99,
    "tax": 0.4433320740460899,
    "tip": 1.7602499999999999,
    "total": 14.438582074046089,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.5,
    "fries": 1.745,
    "name": undefined,
    "price": 12.99,
    "tax": 0.55666792595391,
    "tip": 2.21025,
    "total": 18.001917925953908,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.5,
    "fries": 1.745,
    "name": undefined,
    "price": 9.99,
    "tax": 0.4433320740460899,
    "tip": 1.7602499999999999,
    "total": 14.438582074046089,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.5,
    "fries": 1.745,
    "name": undefined,
    "price": 12.99,
    "tax": 0.55666792595391,
    "tip": 2.21025,
    "total": 18.001917925953908,
    "user_id": undefined,
  },
]
`;

exports[`generate payment for delivery order with 5 fries 1`] = `
Array [
  Object {
    "delivery": 0.4,
    "fries": 1.596,
    "name": undefined,
    "price": 9.99,
    "tax": 0.3462124607799193,
    "tip": 1.7379,
    "total": 14.070112460779919,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.4,
    "fries": 1.596,
    "name": undefined,
    "price": 12.99,
    "tax": 0.43585835948005375,
    "tip": 2.1879,
    "total": 17.609758359480054,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.4,
    "fries": 1.596,
    "name": undefined,
    "price": 9.99,
    "tax": 0.3462124607799193,
    "tip": 1.7379,
    "total": 14.070112460779919,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.4,
    "fries": 1.596,
    "name": undefined,
    "price": 12.99,
    "tax": 0.43585835948005375,
    "tip": 2.1879,
    "total": 17.609758359480054,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.4,
    "fries": 1.596,
    "name": undefined,
    "price": 12.99,
    "tax": 0.43585835948005375,
    "tip": 2.1879,
    "total": 17.609758359480054,
    "user_id": undefined,
  },
]
`;

exports[`generate payment for delivery order with large fries 1`] = `
Array [
  Object {
    "delivery": 0.6666666666666666,
    "fries": 1.33,
    "name": undefined,
    "price": 9.99,
    "tax": 0.6868932038834952,
    "tip": 1.698,
    "total": 14.371559870550161,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.6666666666666666,
    "fries": 1.33,
    "name": undefined,
    "price": 12.99,
    "tax": 0.8689320388349514,
    "tip": 2.148,
    "total": 18.00359870550162,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.6666666666666666,
    "fries": 1.33,
    "name": undefined,
    "price": 5.99,
    "tax": 0.4441747572815534,
    "tip": 1.098,
    "total": 9.52884142394822,
    "user_id": undefined,
  },
]
`;

exports[`generate payment for delivery single order no fries 1`] = `
Array [
  Object {
    "delivery": 2,
    "fries": 0,
    "name": undefined,
    "price": 9.99,
    "tax": 2,
    "tip": 1.4985,
    "total": 15.4885,
    "user_id": undefined,
  },
]
`;

exports[`generate payment for delivery single order with fries 1`] = `
Array [
  Object {
    "delivery": 2,
    "fries": 2.99,
    "name": undefined,
    "price": 9.99,
    "tax": 2,
    "tip": 1.947,
    "total": 18.927,
    "user_id": undefined,
  },
]
`;

exports[`generate payment for delivery varying orders 1`] = `
Array [
  Object {
    "delivery": 0.5,
    "fries": 1.995,
    "name": undefined,
    "price": 12.99,
    "tax": 0.5404869251577997,
    "tip": 2.24775,
    "total": 18.2732369251578,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.5,
    "fries": 0,
    "name": undefined,
    "price": 6.49,
    "tax": 0.23408476104598738,
    "tip": 0.9735,
    "total": 8.197584761045988,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.5,
    "fries": 0,
    "name": undefined,
    "price": 14.49,
    "tax": 0.5226330027051398,
    "tip": 2.1734999999999998,
    "total": 17.68613300270514,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.5,
    "fries": 1.995,
    "name": undefined,
    "price": 17.49,
    "tax": 0.702795311091073,
    "tip": 2.9227499999999997,
    "total": 23.610545311091073,
    "user_id": undefined,
  },
]
`;

exports[`generate payment for pickup order with 4 fries 1`] = `
Array [
  Object {
    "delivery": 0,
    "fries": 1.745,
    "name": undefined,
    "price": 9.99,
    "tax": 0.4433320740460899,
    "tip": 0,
    "total": 12.17833207404609,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 1.745,
    "name": undefined,
    "price": 12.99,
    "tax": 0.55666792595391,
    "tip": 0,
    "total": 15.29166792595391,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 1.745,
    "name": undefined,
    "price": 9.99,
    "tax": 0.4433320740460899,
    "tip": 0,
    "total": 12.17833207404609,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 1.745,
    "name": undefined,
    "price": 12.99,
    "tax": 0.55666792595391,
    "tip": 0,
    "total": 15.29166792595391,
    "user_id": undefined,
  },
]
`;

exports[`generate payment for pickup order with 5 fries 1`] = `
Array [
  Object {
    "delivery": 0,
    "fries": 1.596,
    "name": undefined,
    "price": 9.99,
    "tax": 0.3462124607799193,
    "tip": 0,
    "total": 11.932212460779919,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 1.596,
    "name": undefined,
    "price": 12.99,
    "tax": 0.43585835948005375,
    "tip": 0,
    "total": 15.021858359480055,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 1.596,
    "name": undefined,
    "price": 9.99,
    "tax": 0.3462124607799193,
    "tip": 0,
    "total": 11.932212460779919,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 1.596,
    "name": undefined,
    "price": 12.99,
    "tax": 0.43585835948005375,
    "tip": 0,
    "total": 15.021858359480055,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 1.596,
    "name": undefined,
    "price": 12.99,
    "tax": 0.43585835948005375,
    "tip": 0,
    "total": 15.021858359480055,
    "user_id": undefined,
  },
]
`;

exports[`generate payment for pickup order with large fries 1`] = `
Array [
  Object {
    "delivery": 0,
    "fries": 1.33,
    "name": undefined,
    "price": 9.99,
    "tax": 0.6868932038834952,
    "tip": 0,
    "total": 12.006893203883495,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 1.33,
    "name": undefined,
    "price": 12.99,
    "tax": 0.8689320388349514,
    "tip": 0,
    "total": 15.188932038834952,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 1.33,
    "name": undefined,
    "price": 5.99,
    "tax": 0.4441747572815534,
    "tip": 0,
    "total": 7.764174757281554,
    "user_id": undefined,
  },
]
`;

exports[`generate payment for pickup single order no fries 1`] = `
Array [
  Object {
    "delivery": 0,
    "fries": 0,
    "name": undefined,
    "price": 9.99,
    "tax": 2,
    "tip": 0,
    "total": 11.99,
    "user_id": undefined,
  },
]
`;

exports[`generate payment for pickup single order with fries 1`] = `
Array [
  Object {
    "delivery": 0,
    "fries": 2.99,
    "name": undefined,
    "price": 9.99,
    "tax": 2,
    "tip": 0,
    "total": 14.98,
    "user_id": undefined,
  },
]
`;

exports[`generate payment for pickup varying orders 1`] = `
Array [
  Object {
    "delivery": 0,
    "fries": 1.995,
    "name": undefined,
    "price": 12.99,
    "tax": 0.5404869251577997,
    "tip": 0,
    "total": 15.5254869251578,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 0,
    "name": undefined,
    "price": 6.49,
    "tax": 0.23408476104598738,
    "tip": 0,
    "total": 6.7240847610459875,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 0,
    "name": undefined,
    "price": 14.49,
    "tax": 0.5226330027051398,
    "tip": 0,
    "total": 15.01263300270514,
    "user_id": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 1.995,
    "name": undefined,
    "price": 17.49,
    "tax": 0.702795311091073,
    "tip": 0,
    "total": 20.187795311091072,
    "user_id": undefined,
  },
]
`;
